--- a/server/package.json
+++ b/server/package.json
@@ -3,16 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.14.2"
+  },
   "scripts": {
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "ISC", 
   "dependencies": {
-    "express": "^4.18.1",
+    "express": "^4.18.1",        
     "cors": "^2.8.5",
     "mongodb": "^4.5.0",
-    "mongoose": "^6.3.3"
+    "moment": "^2.29.3",
+    "mongoose": "^6.3.3"   
   }
 }
+    
