--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "eliftech_test_task",
+  "name": "duplomna",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "16.14.2"
+    "node": "17.0.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",        
-    "cors": "^2.8.5",
-    "mongodb": "^4.5.0",
-    "moment": "^2.29.3",
-    "mongoose": "^6.3.3"   
+    "express": "^4.18.1",
+    "mongodb": "^4.8.0",
+    "cors": "^2.8.5"
   }
 }
-    
