--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "duplomna",
+  "name": "eliftech_test_task",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "17.0.1"
-  },
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "mongodb": "^4.8.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.3"
   }
 }
